package com.agence.Trip.Activity;

import java.util.List;

public interface IActivityRepository {
    
    public List<Activity> getAllActivities();
}
